Passief toegevoegd, bug gefixed bij ophalen van volgende woord als er nog maar 1 over is.